@@ -1325,8 +1325,19 @@ void Core::startMplayer( QString file, double seek ) {
 	}
 
 	// URL
+#if AUTO_PLAYLIST
+	QUrl url(file);
+	qDebug("Core::startMplayer: checking if stream is a playlist");
+	qDebug("Core::startMplayer: url path: '%s'", url.path().toUtf8().constData());
+
+	QRegExp rx("\\.ram$|\\.asx$|\\.m3u$|\\.pls$", Qt::CaseInsensitive);
+	bool url_is_playlist = (rx.indexIn(url.path()) != -1);
+
+	qDebug("Core::startMplayer: url_is_playlist: %d", url_is_playlist);
+#else
 	bool url_is_playlist = file.endsWith(IS_PLAYLIST_TAG);
 	if (url_is_playlist) file = file.remove( QRegExp(IS_PLAYLIST_TAG_RX) );
+#endif
 
 	bool screenshot_enabled = ( (pref->use_screenshot) && 
                                 (!pref->screenshot_directory.isEmpty()) && 
